Fix LR scheduler and add python files

--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -505,13 +505,13 @@
    "source": [
     "# loss function and optimizer\n",
     "\n",
-    "LEARNING_RATE = 0.01\n",
+    "LEARNING_RATE = 0.1\n",
     "\n",
     "loss_func = nn.CrossEntropyLoss()\n",
     "\n",
-    "sgd = torch.optim.SGD(params = resnet.parameters(), lr = LEARNING_RATE, momentum = 0.9)\n",
+    "sgd = torch.optim.SGD(params = resnet.parameters(), lr = LEARNING_RATE, momentum = 0.9, weight_decay = 0.0001)\n",
     "\n",
-    "learning_decay = torch.optim.lr_scheduler.StepLR(optimizer = sgd, step_size = 30, gamma = 0.1)"
+    "learning_decay = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer = sgd, mode = \"min\", factor = 0.1)"
    ]
   },
   {
