--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -589,8 +589,8 @@
     "\n",
     "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
     "\n",
-    "print(f\"Saving GoogLeNet to {MODEL_SAVE_PATH}\")\n",
-    "torch.save(obj = alexnet.state_dict(), f = MODEL_SAVE_PATH)"
+    "print(f\"Saving ResNet to {MODEL_SAVE_PATH}\")\n",
+    "torch.save(obj = resnet.state_dict(), f = MODEL_SAVE_PATH)"
    ]
   }
  ],
