--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -400,8 +400,6 @@
     "\n",
     "            total_steps += 1\n",
     "\n",
-    "        # learning rate decay\n",
-    "        scheduler.step()\n",
     "\n",
     "        # performance on test set\n",
     "        # turn on inference mode\n",
@@ -423,6 +421,9 @@
     "            \n",
     "            total_val_loss /= len(val_dataloader)\n",
     "            val_acc /= len(val_dataloader)\n",
+    "\n",
+    "            # learning rate decay\n",
+    "            scheduler.step(total_val_loss)\n",
     "\n",
     "        train_loss /= len(train_dataloader)\n",
     "        train_acc /= len(train_dataloader)\n",
